# Physics_Engine

./: .gitignore  CMakeLists.txt  Colliders.h  Main.cpp  PhysicsWorld.cpp  PhysicsWorld.h  Start.cpp  examples_trainings.cpp
eigen-3.4.0/: .gitignore
examples/: example1.cpp
include/: PhysicsWorld.h
src/: physics_engine.cpp
